--- a/Client/.prettierrc.json
+++ b/Client/.prettierrc.json
@@ -1,8 +1,16 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+	"$schema": "https://json.schemastore.org/prettierrc",
+	"tabWidth": 2,
+	"useTabs": true,
+	"semi": true,
+	"singleQuote": false,
+	"jsxSingleQuote": false,
+	"quoteProps": "as-needed",
+	"jsxBracketSameLine": false,
+	"arrowParens": "always",
+	"trailingComma": "none",
+	"bracketSpacing": true,
+	"vueIndentScriptAndStyle": true,
+	"endOfLine": "auto",
+	"printWidth": 100
 }
