--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
 		"start:format": "prettier --write src/"
 	},
 	"dependencies": {
+		"gsap": "^3.12.5",
 		"less": "^4.2.0",
 		"sanitize.css": "^13.0.0",
 		"vue": "^3.4.21",
