--- a/Client/package.json
+++ b/Client/package.json
@@ -16,8 +16,10 @@
 		"start:format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@primevue/themes": "4.0.0-beta.5",
 		"gsap": "^3.12.5",
 		"less": "^4.2.0",
+		"primevue": "^3.52.0",
 		"sanitize.css": "^13.0.0",
 		"vue": "^3.4.21",
 		"vue-router": "^4.3.0"
