--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "client",
-	"version": "0.0.0",
+	"version": "1.0.0",
+	"author": "Edanriell",
 	"private": true,
+	"license": "MIT",
 	"type": "module",
 	"scripts": {
 		"start:dev": "vite",
